Fixes Apply Now button position and bg color on mobile (safari)

--- a/resources/assets/sass/partials/_recruitment.scss
+++ b/resources/assets/sass/partials/_recruitment.scss
@@ -42,7 +42,7 @@
       justify-content: center;
 
       @include breakpoint(medium down) {
-        padding-bottom: calc(#{$grid-container-padding-md} + 4em);
+        padding-bottom: calc(#{$grid-container-padding-md} + 8em);
         justify-content: flex-end;
         position: relative;
       }
@@ -86,6 +86,7 @@
       padding-top: 10px;
       border-radius: 2px;
       padding-bottom: 10px;
+      background-color: $light-gray-darker;
     }
 
     &-emojis {
